--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "livetest-program",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "livetest program scripting",
   "main": "livetest-program",
   "scripts": {
     "test": "livetest --config=./test/config.json"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kruemelo/livetest-program.git"
   },
   "keywords": [
     "livetest",
@@ -15,7 +19,7 @@
   "author": "kruemelo",
   "license": "MIT",
   "dependencies": {
-    "livetest": "0.0.11"
+    "livetest": "0.0.12"
   },
   "devDependencies": {
     "jquery": "^2.2.2"
